# noligomacho

./: .gitignore  docker-compose.yml
docs/: decisionlog.md
noligomacho/: .gitignore  README.md  pyproject.toml
noligomacho/app/: server.py
noligomacho/app/routes/: add_document.py  expansion.py  foo.py  hypothetical_expansion.py  jurisprudence.py  jurisprudence_whole_doc.py
noligomacho/app/services/: models.py  reranker.py  vector_store.py
noligomacho/app/text_utils/: highlight_processor.py
noligomacho/indexing/: index_scripts.py
