[tool.poetry]
name = "noligomacho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
httpx = "0.27.2"
pydantic = "^2.11.7"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
langchain-ollama = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
