[tool.poetry]
name = "noligomacho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {version = "0.3.1", extras = ["server"]}
httpx = "0.27.2"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
langchain = "0.3.26"
numpy = "^2.3.1"
sentence-transformers = "^5.0.0"
langchain-huggingface = "^0.3.0"
langchain-elasticsearch = "^0.3.2"
langchain-community = "^0.3.27"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
langchain-ollama = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
